@@ -1,5 +1,5 @@
 /*
-   Copyright (C) 2010-2012, 2014-2016, 2018-2020, 2022 Free Software Foundation, Inc.
+   Copyright (C) 2010-2012, 2014-2016, 2018-2020, 2022, 2024 Free Software Foundation, Inc.
    Modified for use in GnuCOBOL by Roger While, Simon Sobisch
 */
 
@@ -27,7 +27,6 @@
 #include <stdlib.h>
 #include <stddef.h>
 #include <string.h>
-#include <ctype.h>
 
 #ifdef	HAVE_UNISTD_H
 #include <unistd.h>
